[tool.poetry]
name = "wiki-data"
version = "0.1.0"
description = "Wiki data for analysing, scraping, and visualization with python."
authors = ["Akshat Pande <akshat.pande@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
